--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,21 +35,15 @@ jobs:
       - name: 📚 Install Vercel CLI
         run: pnpm add -g vercel@latest
 
-      - name: 🔍 Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: 🏗️ Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-        env:
-          NEXT_TELEMETRY_DISABLED: 1
-
-      - name: 🚀 Deploy Project Artifacts to Vercel
+      - name: 🚀 Deploy to Vercel Production
         id: deploy
         run: |
-          url=$(vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }})
+          url=$(vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }})
           echo "url=$url" >> $GITHUB_OUTPUT
           echo "### 🚀 Deployment erfolgreich!" >> $GITHUB_STEP_SUMMARY
           echo "**URL:** $url" >> $GITHUB_STEP_SUMMARY
+        env:
+          NEXT_TELEMETRY_DISABLED: 1
 
       - name: 📊 Deployment Summary
         run: |
